# wrg2024_turtlebot3_ws

./: .colconignore  .gitattributes  .gitmodules  Makefile  README.md  make.sh  robot_startup.sh
..bfg-report/2024-07-22/01-43-05/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
firmware/: platformio.ini
firmware/src/: main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/wrg_core/lib/wrg_core/: navigate.py  (+3 more)
log/: latest_build
robot_ws/: Makefile  frames_2024-07-26_14.06.34.gv  launch_bot.sh  map.pgm  map.yaml
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/log/: latest_build
robot_ws/src/wrg_core/: CMakeLists.txt  package.xml
robot_ws/src/wrg_turtlebot3_gazebo/: CMakeLists.txt
ros2-web-control/: package-lock.json  package.json
ros2-web-control/install/: local_setup.sh  setup.ps1  setup.sh
ros2-web-control/log/: latest_build
ros2-web-control/ros2-web-brige/: package-lock.json  package.json
ros2-web-control/ros2-web-brige/lib/: bridge.js
ros2-web-control/web-control/: .env  package-lock.json  package.json  server.js  webpack.config.js
ros2-web-control/web-control/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ros2-web-control/web-control/log/: latest_build
ros2-web-control/web-control/public/: index.html
ros2-web-control/web-control/src/: App.css  App.js  Ros2dViewer.js  Terminal.js
src/wrg_core/: CMakeLists.txt
src/wrg_core/config/: locations.yaml
src/wrg_core/launch/: nav2_map.launch.py  navigation2.launch.py  state.launch.py
src/wrg_core/map/: map.yaml  map201.yaml
src/wrg_core/scripts/: navigate.py  robot_main_state.py  talker.py
src/wrg_core/src/: nav2_control.py
(+633 files in other folders)
